# LibeventSolution

./: README.md
src/LibeventSolution/: CMakeLists.txt
src/LibeventSolution/LibeventSolution/: CMakeLists.txt  LibeventSolution.cpp  LibeventSolution.h
src/LibeventSolution/LibeventWebServices/: CMakeLists.txt  LibeventWebServices.cpp  LibeventWebServices.h
